2006-02-24  Karl Runge <runge@karlrunge.com>
	* x11vnc: -unixpw and -stunnel options.  Add clipboard input
	  to per-client input controls.

2006-02-24  Rohit Kumar <rokumar@novell.com>
	* main.c, rfbtightserver.c, rfb.h: added method to get 
	  extension specific client data.

2006-02-22  Rohit Kumar <rokumar@novell.com>
	* auth.c, main.c, rfbtightserver.c, rfb.h: add methods to
	  unregister extensions and security types.

2006-02-20  Karl Runge <runge@karlrunge.com>
	* main.c, cursor.c, tightvnc-filetransfer: fix some non-gcc
	  compiler warnings.

2006-01-14  Karl Runge <runge@karlrunge.com>
	* x11vnc: add -8to24 option for some multi-depth displays.

2006-01-12  Karl Runge <runge@karlrunge.com>
	* configure.ac: add switches for most X extensions.

2006-01-10  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* libvncserver/{main.c,rfbserver.c}: fix timely closing of clients;
	  the client iterator in rfbProcessEvents() has to iterate also
	  over clients whose sock < 0. Noticed by Karl.

2006-01-08  Karl Runge <runge@karlrunge.com>
	* x11vnc: the big split. (and -afteraccept and -passwdfile read:..)
	* examples/pnmshow24.c: fix typo.

2006-01-08  Karl Runge <runge@karlrunge.com>
	* libvncclient/vncviewer.c: fix non-jpeg/libz builds.
	* examples/pnmshow24.c: fix non-ALLOW24BPP builds.
	* libvncserver/main.c: fix 'static int' defn.

2006-01-05  Karl Runge <runge@karlrunge.com>
	* libvncserver/main.c: rfbRegisterProtocolExtension extMutex was
	  never initialized.

2005-12-24  Karl Runge <runge@karlrunge.com>
	* x11vnc: enhance -passwdfile features, filetransfer on by default.

2005-12-19  Dave Stuart <dave@justdave.us>
	* libvncserver/{main.c,rfbserver.c,cargs.c}, rfb/rfb.h: introduce
	  deferPtrUpdateTime, which defers the handling of pointer events
	  for a couple of milliseconds.

2005-12-19  Johannes E. Schindelin  <Johannes.Schindelin@gmx.de>
	* client_examples/SDLvncviewer.c, libvncclient/{sockets.c,vncviewer.c},